--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/css/templatemo-stand-blog.css">
     <link rel="stylesheet" href="/css/owl.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/home_skeleton.css">
 
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
