--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="/css/fontawesome.css">
     <link rel="stylesheet" href="/css/templatemo-stand-blog.css">
-    <link rel="stylesheet" href="/css/owl.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/swiper.css">
     <link rel="stylesheet" href="/css/home_skeleton.css">
 
     <script src="/vendor/jquery/jquery.min.js"></script>
